Move some makfiles.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,15 +1,7 @@
 EXE=teno
 DEPANDS=$(wildcard ./src/pub/*.h)
-export VPATH =+ ./pub/
-
-export obj
-
-MAKE = make
-
-export TENO_OBJ_PATH = $(abspath ../obj)
-
-TENO_LOG_PATH = ./log/
-TENO_TEST_PATH = ../test/
+export VPATH =+ ./pub/	
+include ../var.mk
 
 all:
 	cd $(TENO_LOG_PATH) && $(MAKE)
