clear src test makefiles.

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,6 +3,10 @@ DEPANDS=$(wildcard ./src/pub/*.h)
 export VPATH =+ ./pub/	
 include ../var.mk
 
+TENO_LOG_PATH = ./log
+
+TENO_OBJ_PATH = ../obj
+
 all:
 	cd $(TENO_LOG_PATH) && $(MAKE)
 
