Add some modes.

--- a/src/Makefile
+++ b/src/Makefile
@@ -7,6 +7,8 @@ TENO_LOG_PATH = ./log
 
 TENO_OBJ_PATH = ../obj
 
+export TENO_PUB_HEADER = pub_def.h pub_inc.h
+
 all:
 	cd $(TENO_LOG_PATH) && $(MAKE)
 
