--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,16 @@
 *.o
-./src/*.o
-./example/*.o
+src/*.o
 design
 libteno.so
-./example/teno_exp_1
-/.gitignore
+example/teno_exp_1
 teno_exp_1
 pthreads
 test/
-/src/cscope.po.out
-/src/cscope.in.out
-/src/cscope.out
-/cscope.in.out
-/cscope.out
-/cscope.po.out
+src/do_not_trace/
+src/cscope.*
+cscope.*
+example/teno_exp_2_server
+example/teno_exp_2_client
+src/nul
+example/*.o
+**.o
