--- a/src/Makefile
+++ b/src/Makefile
@@ -1,14 +1,14 @@
 lib=libteno.so
 PUB_HDR=teno_pub.h teno_type.h teno.h
 OBJS=teno.o teno_cli.o teno_service.o teno_mq.o teno_msg.o teno_sci.o \
-     teno_str.o teno_var.o teno_trace.o teno_monitor.o
-CFLAGS=-g -Wall
+     teno_str.o teno_var.o teno_trace.o teno_monitor.o teno_socket_unix.o
+CFLAGS=-g -Wall -D TENO_DEBUG
 
 all:$(lib)
 	mv $(lib) ../
 
 $(OBJS):%.o:%.c %.h $(PUB_HDR)
-		$(CC) -c $(CFLAGS) $< -o $@
+		$(CC)  -c $(CFLAGS) $< -o $@
 
 $(lib):$(OBJS)
 	$(CC) -o $@ -shared $^
@@ -17,3 +17,6 @@ $(lib):$(OBJS)
 clean :
 	-rm  $(OBJS)
 	-rm  ../$(lib)
+
+check-syntax:
+	gcc -o nul -S ${CHK_SOURCES}
